force-app/main/default/objects/AcctPlanCollectionDomestic__c/AcctPlanCollectionDomestic__c.object-meta.xml
<CustomObject>
    <description>Account Plan Collection Domestic of Wallet</description>
    <label>Account Plan Collection Domestic</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>AcctPlanCollectionDomestic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Collection Domestic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>