force-app/main/default/objects/AcctPlanCollectionDomestic__c/fields/AcctPlanCollectionMethodDomestic__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanCollectionMethodDomestic__c</fullName>
    <description>Account Plan Collection Method Domestic</description>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Collection Domestic</relationshipLabel>
    <relationshipName>Account_Plan_Collection_Domestic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>