force-app/main/default/objects/AcctPlanCollectionDomestic__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Collection Method (Domestic)</inlineHelpText>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>