force-app/main/default/objects/AcctPlanCollectionDomestic__c/fields/NoOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>NoOfTransaction__c</fullName>
    <description>จำนวนธุรกรรมต่อ 1 เดือน สำหรับวิธีการรับเงินแต่ละประเภท</description>
    <inlineHelpText>จำนวนธุรกรรมต่อ 1 เดือน สำหรับวิธีการรับเงินแต่ละประเภท</inlineHelpText>
    <label>No. of transactions (Average per Month)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>