force-app/main/default/objects/AcctPlanCollectionDomestic__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>สัดส่วนของการรับเงินแต่ละวิธีว่ามีสัดส่วนเท่าใด</description>
    <inlineHelpText>สัดส่วนของการรับเงินแต่ละวิธีว่ามีสัดส่วนเท่าใด</inlineHelpText>
    <label>Domestic (Vol.) (Average per Month)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>