force-app/main/default/objects/AcctPlanCollectionDomestic__c/fields/WalletFee__c.field-meta.xml
<CustomField>
    <fullName>WalletFee__c</fullName>
    <description>Wallet ของ Cash Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการรับเงินจากในประเทศ</description>
    <formula>IF( NoOfTransaction__c &gt;0,
(NoOfTransaction__c*12)* IF( ISNULL(FeeCharge__c),1,FeeCharge__c*100)
,
 IF(Label__c != &apos;3) Bill Payment&apos;, Volume__c *12 *(FeeCharge__c),null)

)</formula>
    <inlineHelpText>Wallet ของ Cash Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการรับเงินจากในประเทศ</inlineHelpText>
    <label>WalletFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>